Draft of AppExchange Overview article with linking

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -7,6 +7,7 @@ image: img/og/og-image-docs-and-snippets.png
 ---
 
 import { LeadText } from '../src/components/LeadText.js';
+import { Button } from '../src/components/Buttons.js';
 
 <LeadText content="SSJS + JS + AMPScript + SQL + SFMC Config documentation and code snippets that I find useful for developing Salesforce Marketing Cloud." />
 
@@ -14,7 +15,10 @@ import { LeadText } from '../src/components/LeadText.js';
 
 Salesforce Marketing Cloud is a complex and flexible tool. This combination is a dream-come-true set for enterprise Marketing Automation tools, but on the other hand, it enables mistakes and messy solutions. Find the right path to success through a best-practice fuelled checklist full of tool-based explanations and examples.
 
-<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="./zen-of-sfmc">Read about Zen of SFMC</a>
+<Button
+    link='./zen-of-sfmc'
+    text='Read about Zen of SFMC'
+/>
 
 ## Server-Side JavaScript
 
@@ -34,7 +38,10 @@ SSJS is an XX-century version of JavaScript paired with proprietary libraries cr
 - [MobileConnect Phone Change](./ssjs/ssjs-snippet-mobileconnect-phone-change.mdx)
 - [SSJS Script Template](./ssjs/ssjs-snippet-ssjs-script-template.mdx)
 
-<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="../docs/category/ssjs/">Read about SSJS</a>
+<Button
+    link='../docs/category/ssjs/'
+    text='Read about SSJS'
+/>
 
 ## JavaScript
 
@@ -50,7 +57,10 @@ In this part, I am gathering selected elements of modern vanilla JavaScript that
 
 - [Export, Import & Document Roles in Salesforce Marketing Cloud](./js/js-snippet-export-import-document-sfmc-roles.mdx)
 
-<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="../docs/category/javascript/">Read about JavaScript</a>
+<Button
+    link='../docs/category/javascript/'
+    text='Read about JavaScript'
+/>
 
 ## AMPScript
 
@@ -65,7 +75,10 @@ AMPScript is a proprietary scripting language in Salesforce Marketing Cloud alon
 
 - [AMPScript in SSJS](./ssjs/ssjs-snippet-ampscript-in-ssjs.mdx)
 
-<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="../docs/category/ampscript/">Read about AMPScript</a>
+<Button
+    link='../docs/category/ampscript/'
+    text='Read about AMPScript'
+/>
 
 ## SFMC SQL
 
@@ -93,7 +106,10 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 - [Debugging Email Sends](./sql/sfmc-sql-snippet-debugging-email-sends.mdx)
 - [Debugging Value Length](./sql/sfmc-sql-snippet-debugging-value-length.mdx)
 
-<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="../docs/category/sfmc-sql/">Read about SFMC SQL</a>
+<Button
+    link='../docs/category/sfmc-sql/'
+    text='Read about SFMC SQL'
+/>
 
 ## SFMC Config
 
@@ -104,7 +120,10 @@ Many things in Salesforce Marketing Cloud aren't coding but have a massive impac
 - [Features On Demand](./config/sfmc-config-features-on-demand.mdx)
 - [Behavioral Triggers](./config/sfmc-config-behavioral-triggers.mdx)
 
-<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="../docs/category/sfmc-config/">Read about SFMC Config</a>
+<Button
+    link='./docs/category/sfmc-config/'
+    text='Read about SFMC Config'
+/>
 
 ## SFMC Use Cases
 
@@ -117,7 +136,21 @@ Knowing how to code is one thing. Knowing what to code is another. In Use Cases,
 - [Enhanced Send Log](./usecase/sfmc-enhanced-send-log.mdx)
 - [Contact Deletion Process](./usecase/sfmc-contact-deletion.mdx)
 
-<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="../docs/category/sfmc-use-cases/">Read about SFMC Config</a>
+<Button
+    link='./docs/category/sfmc-use-cases/'
+    text='Read about SFMC Use Cases'
+/>
+
+## SFMC AppExchange
+
+There are over 4000 solutions in Salesforce AppExchange with few dozens dedicated to Salesforce Marketing Cloud. Here I want to go through the most interesting ones and get a bit deeper into their value proposition.
+
+<!-- - [SFMC AppExchange Overview](./appexchange/sfmc-appexchange-overview.mdx) -->
+
+<Button
+    link='./appexchange/sfmc-appexchange-overview'
+    text='Read about SFMC AppExchange'
+/>
 
 ## Changes
 
