Updates to Toolset article

--- a/sites/toolset.mdx
+++ b/sites/toolset.mdx
@@ -53,6 +53,10 @@ My Mac is a bit more customized. For starters, instead of bash, I'm using [zsh](
 
 On both systems, I leverage [Node.js](https://nodejs.org/en/) for JavaScript related coding and [Miniconda](https://docs.conda.io/en/latest/miniconda.html) to stay sane in the [jungle full of Pythons](https://xkcd.com/1987/).
 
+### Diagrams
+
+[Lucidchart](https://www.lucidchart.com/). I need visuals for mapping out architectures, processes and stories. Lucidchart makes it fast and easy.
+
 ### API Client
 
 [Postman](http://postman.com). It is simple, and it works.
@@ -65,13 +69,10 @@ I'm not a graphic designer. I need something that is simple, fast and can output
 
 Apart from the above main areas, I also love some smaller apps that make my life better (unfortunately, all but the last one are Mac only):
 
-1. [Alfred](https://www.alfredapp.com/) is one of the best ways to keep your hands on the keyboard all the time. And there are tons of extensions (called workflows) that make it even better. Some of my favourite:
-    - [Search Notes](https://github.com/sballin/alfred-search-notes-app) is a must-have if you use Apple Notes and want to find a specific one quickly.
-    - [TimeZones](https://www.packal.org/workflow/timezones-2) helps you navigate the global village and its time differences.
-2. [Numi](https://numi.app/) - the best calculator app you can have. By far.
-3. [Better Touch Tool](https://folivora.ai/) not only allows you to leverage gestures to their fullest but also takes care of windows snapping to the edges.
-4. [Mailplane](https://mailplaneapp.com/) - if you use Gmail and have a Mac, this app is a must.
-5. [PDF Expert](https://pdfexpert.com/) is the best PDF app you can have.
-6. For tasks and notes, after testing multiple options, I stuck with Apple Notes and Reminders.
+1. [Numi](https://numi.app/) - the best calculator app you can have. By far.
+2. [Better Touch Tool](https://folivora.ai/) not only allows you to leverage gestures to their fullest but also takes care of windows snapping to the edges.
+3. [Mailplane](https://mailplaneapp.com/) - if you use Gmail and have a Mac, this app is a must.
+4. [PDF Expert](https://pdfexpert.com/) is the best PDF app you can have.
+5. For tasks and notes, after testing multiple options, I stuck with Apple Notes and Reminders.
 
 For Windows, there is one must-have power user tool: [Microsoft PowerToys](https://github.com/microsoft/PowerToys). Make your day-to-day Windows life better.
