--- a/docs/config/sfmc-config-system-data-views.mdx
+++ b/docs/config/sfmc-config-system-data-views.mdx
@@ -25,7 +25,7 @@ Another important point related to Data Views is always knowing which Data View 
 
 :::note You Should Know
 
-Below you can find selected Salesforce Marketing Cloud Data Views focused on Subscribers and Email Channel. I plan to cover the rest of them in the future.
+Below you can find selected Salesforce Marketing Cloud Data Views focused on Subscribers, Journeys, Email and SMS Channel. I plan to cover the rest of them in the future.
 
 Be sure to check the excellent [Data Views relationship diagram](https://sfmarketingcloudhome.files.wordpress.com/2021/02/dataviews_2021_v2.png) created by [Zuzanna Jarczyńska](https://sfmarketing.cloud) or a bit more complex, but more in-depth [System Tables relationship diagram](https://dbdiagram.io/d/5ff259ed80d742080a34e3c3) created by [Cameron Roberts](https://cameronrobert.com.au). Those will for sure help you with multi-view [`JOIN`s](../sql/sfmc-sql-join.mdx).
 
