Update to AppExchange Overview draft

--- a/docs/appexchange/sfmc-appexchange-overview.mdx
+++ b/docs/appexchange/sfmc-appexchange-overview.mdx
@@ -2,7 +2,7 @@
 id: sfmc-appexchange-overview
 title: SFMC AppExchange Overview
 sidebar_label: SFMC AppExchange
-description: WIP.
+description: Fill the feature gaps with plug and play apps. Salesforce Marketing Cloud AppExchange ready-to-use solution highlights.
 image: img/og/og-image-sfmc-appexchange-overview.png
 tags: [Marketing Cloud, App, AppExchange]
 ---
@@ -10,7 +10,21 @@ tags: [Marketing Cloud, App, AppExchange]
 import { LeadText } from '../../src/components/LeadText.js';
 import { Button, ButtonRow } from '../../src/components/Buttons.js';
 
-<LeadText content='WIP.' />
+<LeadText content='Fill the feature gaps with plug and play apps. Salesforce Marketing Cloud AppExchange ready-to-use solution highlights.' />
+
+AppExchange is a Salesforce-owned app store for Salesforce platforms. You will find there Salesforce-built solutions (coming from Salesforce Labs) as well as 3rd party ones. Free and paid. Good and bad. But all - [validated by Salesforce](https://developer.salesforce.com/docs/atlas.en-us.packagingGuide.meta/packagingGuide/security_review_guidelines.htm).
+
+From over 4000 solutions available there, only around 60 are focused on core [Saleforce Marketing Cloud](https://appexchange.salesforce.com/category/marketing). I will be focusing only on solutions I had experience with, so that I can add some value over standard AppExchange descriptions and marketing materials.
+
+:::note You Should Know
+
+This document is a living thing. New solutions keep popping up, old ones sometimes disappear or are recreated. I try to keep it up-to-date, but your help with this task will be appreciated.
+
+:::
+
+## When AppExchange is worth it?
+
+Before we jump into specific solutions available in the store, let's talk when you should consider going through AppExchange offerings.
 
 ## SFMC Segmentation Solutions
 
