Addition of Article Images folder structure with first images for AppExchange Article

--- a/docs/appexchange/sfmc-appexchange-overview.mdx
+++ b/docs/appexchange/sfmc-appexchange-overview.mdx
@@ -9,6 +9,9 @@ tags: [Marketing Cloud, App, AppExchange]
 
 import { LeadText } from '../../src/components/LeadText.js';
 import { Button, ButtonRow } from '../../src/components/Buttons.js';
+import Image from '@theme/IdealImage';
+import flowchart from '../../static/img/article/article-image-appexchange-flowchart.png';
+import segmentation from '../../static/img/article/article-image-appexchange-segmentation.png';
 
 <LeadText content='Fill the feature gaps with plug and play apps. Salesforce Marketing Cloud AppExchange ready-to-use solution highlights.' />
 
@@ -24,9 +27,13 @@ This document is a living thing. New solutions keep popping up, old ones sometim
 
 ## When AppExchange is worth it?
 
-Before we jump into specific solutions available in the store, let's talk when you should consider going through AppExchange offerings.
+Before we jump into specific solutions available in the store, let's talk when you should consider going through AppExchange offerings. This question is especially relevant with how feature-packed and customizable the Marketing Cloud is.
+
+<Image img={flowchart} />
 
 ## SFMC Segmentation Solutions
+
+<Image img={segmentation} />
 
 ### Query Studio
 
