Updated draft of AppExchange article

--- a/docs/appexchange/sfmc-appexchange-overview.mdx
+++ b/docs/appexchange/sfmc-appexchange-overview.mdx
@@ -15,9 +15,9 @@ import segmentation from '../../static/img/article/article-image-appexchange-seg
 
 <LeadText content='Fill the feature gaps with plug and play apps. Salesforce Marketing Cloud AppExchange ready-to-use solution highlights.' />
 
-AppExchange is a Salesforce-owned app store for Salesforce platforms. You will find there Salesforce-built solutions (coming from Salesforce Labs) as well as 3rd party ones. Free and paid. Good and bad. But all - [validated by Salesforce](https://developer.salesforce.com/docs/atlas.en-us.packagingGuide.meta/packagingGuide/security_review_guidelines.htm).
+AppExchange is an app store for various Clouds within Salesforce Customer 360 platform. You will find there both  in-house solutions coming from Salesforce Labs and 3rd party ones. Free and paid. Good and bad. But all - validated by [Salesforce Security Review](https://developer.salesforce.com/docs/atlas.en-us.packagingGuide.meta/packagingGuide/security_review_guidelines.htm).
 
-From over 4000 solutions available there, only around 60 are focused on core [Saleforce Marketing Cloud](https://appexchange.salesforce.com/category/marketing). I will be focusing only on solutions I had experience with, so that I can add some value over standard AppExchange descriptions and marketing materials.
+From over 4000 solutions available there, only around 60 are for the [Saleforce Marketing Cloud](https://appexchange.salesforce.com/category/marketing). Here, I will be focusing only on those I had experience with to provide some value over the standard AppExchange descriptions and marketing materials.
 
 :::note You Should Know
 
@@ -25,9 +25,24 @@ This document is a living thing. New solutions keep popping up, old ones sometim
 
 :::
 
-## When AppExchange is worth it?
+## When is AppExchange worth it?
 
-Before we jump into specific solutions available in the store, let's talk when you should consider going through AppExchange offerings. This question is especially relevant with how feature-packed and customizable the Marketing Cloud is.
+Before we jump into specific solutions available in the store, let's talk whether you even should consider going through AppExchange offerings. This question is especially relevant with how feature-packed and customizable the Marketing Cloud is. And not that easy to answer when you consider all decision drivers.
+
+### 1. Define feature requirements
+
+Ok, you want some feature and are eager to find a solution that can deliver it. Now stop. Before opening the AppExchange repository you should first dive deep into what are the exact requirements the solution has to fulfil.
+
+Key things to consider:
+- What it needs to do - what is minimum valuable outcome and what is an ideal one?
+- How it needs to do it - does it have to be user friendly no-code solution or is developer-oriented approach acceptable?
+- Where it needs to do it - does it have to be done within the SFMC or can it be external?
+- Who needs to do it - do you have resources to implement it or should it be outsourced?
+- What is the budget - does it have to be free, cheap or you can pay for good value?
+
+Those requirements should be aligned with the final users and be clear enough to serve as a guardrails for making informed decision.
+
+### 2. Validate out-of-the-box solutions
 
 <Image img={flowchart} />
 
