Updated draft of AppExchange article

--- a/docs/appexchange/sfmc-appexchange-overview.mdx
+++ b/docs/appexchange/sfmc-appexchange-overview.mdx
@@ -34,15 +34,30 @@ Before we jump into specific solutions available in the store, let's talk whethe
 Ok, you want some feature and are eager to find a solution that can deliver it. Now stop. Before opening the AppExchange repository you should first dive deep into what are the exact requirements the solution has to fulfil.
 
 Key things to consider:
-- What it needs to do - what is minimum valuable outcome and what is an ideal one?
-- How it needs to do it - does it have to be user friendly no-code solution or is developer-oriented approach acceptable?
-- Where it needs to do it - does it have to be done within the SFMC or can it be external?
-- Who needs to do it - do you have resources to implement it or should it be outsourced?
-- What is the budget - does it have to be free, cheap or you can pay for good value?
+- __What it needs to do__ - what is minimum valuable outcome and what is an ideal one?
+- __How it needs to do it__ - does it have to be user friendly no-code solution or is developer-oriented approach acceptable?
+- __Where it needs to do it__ - does it have to be done within the SFMC or can it be external?
+- __Who needs to do it__ - do you have resources to implement it or should it be outsourced?
+- __What is the budget__ - does it have to be free, cheap or you can pay for good value?
 
 Those requirements should be aligned with the final users and be clear enough to serve as a guardrails for making informed decision.
 
-### 2. Validate out-of-the-box solutions
+### 2. Validate out-of-the-box options
+
+One you have requirements, it's time to check what already is within your Marketing Cloud license. Over the years Salesforce baked in a lot of solutions, so you might find something already there, just waiting to be used.
+
+However, even if your requirement has an out-of-the-box solution, it doesn't always mean the end of the work. You need to check whether it is good and easy enough:
+
+- __Good Enough__: Just because there is something, it might not fulfill all the requirements you gathered in the first step. Maybe it is to basic for your needs or doesn't have access to all data you want to leverage. This is where you start seeing benefits of the prework you did before.
+- __Easy Enough__: Even if the solution is good enough, it might not be easy enough. Always assess the solution taking into consideration knowledge and skills of the end users - not yours (unless you will be the only end user, of course).
+
+If the out-of-the-box solution checks both boxes - you hit a jackpot and can leverage what is alredy there.
+
+Else, it's time to look somewhere... else.
+
+### 3. Free AppExchange Solutions
+
+
 
 <Image img={flowchart} />
 
