Updated draft of AppExchange article

--- a/docs/appexchange/sfmc-appexchange-overview.mdx
+++ b/docs/appexchange/sfmc-appexchange-overview.mdx
@@ -46,6 +46,12 @@ Those requirements should be aligned with the final users and be clear enough to
 
 One you have requirements, it's time to check what already is within your Marketing Cloud license. Over the years Salesforce baked in a lot of solutions, so you might find something already there, just waiting to be used.
 
+:::note You Should Know
+
+Not all solutions are available by default - some require a support ticket to be enabled. Check out my [list of features on-demand](./config/sfmc-config-features-on-demand.mdx) to see whether there is anything hidden that might fulfill your requirements.
+
+:::
+
 However, even if your requirement has an out-of-the-box solution, it doesn't always mean the end of the work. You need to check whether it is good and easy enough:
 
 - __Good Enough__: Just because there is something, it might not fulfill all the requirements you gathered in the first step. Maybe it is to basic for your needs or doesn't have access to all data you want to leverage. This is where you start seeing benefits of the prework you did before.
@@ -57,9 +63,25 @@ Else, it's time to look somewhere... else.
 
 ### 3. Free AppExchange Solutions
 
+Time to check whether there is any free solution available on demand. You can do it by going to [marketing AppExchange](https://appexchange.salesforce.com/category/marketing) and applying filters to get Free solutions dedicated to Marketing Cloud.
 
+To manage your expectations - for Salesforce Marketing Cloud the list won't be long and even then you have to make sure the app is truly offering a meaningful free tier. Expect free Salesforce Labs solutions (like [Query Studio](#query-studio) covered below) and little pearls made by 3rd parties - like Content Builder asset finder [DESelect Search](https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3u00000PFaZrEAL).
+
+If you are lucky enough to find something free in AppExchange that is related to your requirements, be sure to check whether it is good enough. Just as you did in the [previous step](#2-validate-out-of-the-box-options).
+
+No luck? Before checking the paid filter in AppExchange, there is one more approach to consider.
+
+### 4. Custom Solution
+
+### 5. Paid AppExchange Solutions
+
+---
+
+Complex? Would you rather have a visual guide? Got you covered:
 
 <Image img={flowchart} />
+
+Complex? Would you rather have an example-based walkthrough? Got you covered as well in the next chapter:
 
 ## SFMC Segmentation Solutions
 
