Updated draft of AppExchange article

--- a/docs/appexchange/sfmc-appexchange-overview.mdx
+++ b/docs/appexchange/sfmc-appexchange-overview.mdx
@@ -48,7 +48,7 @@ One you have requirements, it's time to check what already is within your Market
 
 :::note You Should Know
 
-Not all solutions are available by default - some require a support ticket to be enabled. Check out my [list of features on-demand](./config/sfmc-config-features-on-demand.mdx) to see whether there is anything hidden that might fulfill your requirements.
+Not all solutions are available by default - some require a support ticket to be enabled. Check out my [list of features on-demand](../config/sfmc-config-features-on-demand.mdx) to see whether there is anything hidden that might fulfill your requirements.
 
 :::
 
@@ -73,15 +73,36 @@ No luck? Before checking the paid filter in AppExchange, there is one more appro
 
 ### 4. Custom Solution
 
+A decade ago building custom solution for every requirement was all the rage. Since then the platforms and their 3rd party ecostystems has grown a lot, making this approach much less tempting. Why?
+
+There are four things to consider:
+
+1. __Can you buld a Custom solution?__ This can be done using in-house developers or outsourced to external specialists but you need either skills or budget.
+2. __Will it be good enough?__ If you have the means, building a custom is easy. But do you have _enough_ skills or budget to build a good solution that will be user friendly, optimized, polished and matching all your requirements?
+3. __Will it be cheaper then AppExchange?__ Sure, with enough time and money, you probably can build something good enough. But will it be cheaper then similar solution available in paid section of AppExchange?
+4. __Will you maintain it?__ Even if you answered yes to previous three points, you need to take into account the maintenance. In most cases building a custom is just the beginning. Requirements change, new needs happen, platforms get updated and require refactor. With AppExchange solutions it _should_ be much less of a worry in the long term.
+
+While the list might look like a hard pass for custom solutions, there is a place for them. Especially on the ends of the spectrum. Simple, but lifesaving micro solutions ([Cloud Page Apps](../usecase/sfmc-cloud-page-apps.mdx), [Code Resources](../usecase/sfmc-code-resource.mdx)) or custom behemots aligned to all non-negotiable quirks and features of your internal processes.
+
+However, if you hit a hard "no" to any of the above questions, it's time to hit the AppExchange again.
+
 ### 5. Paid AppExchange Solutions
+
+Here we are. After defining the requirements, we haven't found anything worthy among the out-of-the-box solutions, the land of the free AppExchange was bareen and the custom work didn't seem like the best choice. Paid AppExchange it is. But is it really?
+
+Assuming you found a paid solution, you still need to assess whether it will be good enough. The good part here? If you see only small pieces missing from the ideal, you might talk with the solution creators and discuss prioritisation of the future changes.
+
+However, you also need to keep in mind the budget. Not only the subscription cost, but also implementation, training, enhancements. After considering all of that - will you still see return on investment? If yes - you are good to go.
+
+If not, it's time to update your requirements - be it the list of needed features or the size of the budget - and [start again](#2-validate-out-of-the-box-options).
 
 ---
 
-Complex? Would you rather have a visual guide? Got you covered:
+Sounds complex? Would you rather have a visual guide? Got you covered:
 
 <Image img={flowchart} />
 
-Complex? Would you rather have an example-based walkthrough? Got you covered as well in the next chapter:
+Looks complex? Would you rather have an example-based walkthrough? Got you covered as well in the next chapter:
 
 ## SFMC Segmentation Solutions
 
